# collision_avoidance

./: CMakeLists.txt  README.md  package.xml
config/: qos_policies.yaml
include/MultiObjectTracker/: KalmanFilter.h  MultiObjectTracker.h  types.h  util.h
include/collision_avoidance/: CollisionAvoidance.hpp
include/cudaCluster/: cudaCluster.h
include/models/: FlatScanModels.h  Hungarian.h  LaserScan.h
launch/: collision_avoidance.launch.py
lib/: cuda_libs.cu
src/: CollisionAvoidance.cpp
